tablet portrait OK

--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
    <!-- end header -->
 
    <!-- placeholder for SlickNav menu -->
-   <nav id="mobilemenu">
-
-   </nav>
+   <nav id="mobilemenu"></nav>
 
    <!--start navigation area -->
-   <nav class="nav">
+   <nav id="nav">
       <ul class="nav_list">
          <li class="nav_item"><a href="#">one</a></li>
          <li class="nav_item"><a href="#">two</a></li>
@@ -216,6 +214,7 @@
          <!-- end .recent-news -->
    </main>
    <!-- end main -->
+
    <!-- start footer -->
    <footer>
       <ul>
